# connect4rl

./: .gitignore  setup.cfg
connect4rl/: __init__.py  board.py  exceptions.py  match.py
connect4rl/rl/: agent.py  env.py  replay.py  train.py
