[metadata]
name = connect4rl
version = 0.0.1

[options]
packages = connect4rl
dependency_links =
    https://download.pytorch.org/whl/cpu/torch_stable.html
install_requires =
    numpy ~= 1.21.5
    torch ~= 1.10.1+cpu
    tqdm ~= 4.62.3

[options.extras_require]
dev =
    black == 21.12b0
    pytest == 6.2.5
    pylint == 2.12.2